--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="navbar-inner">
 							<div class="title" >IS STORE</div>
 							<div class="right">
-								<a class="popup-open" href="#" style="color:red;" data-popup=".popup-actev"><i class="f7-icons">checkmark_circle_fill
+								<a class="popup-open" href="#" style="color:Fuchsia;" data-popup=".popup-actev"><i class="f7-icons">checkmark_circle_fill
 								</i></a>
 								<a class="popup-open" href="#" data-popup=".popup-sardam"><i class="f7-icons">exclamationmark_shield
 								</i></a>
@@ -710,7 +710,7 @@
 					<div style="margin-top:53px;padding:0px;" class="block">
 						<img style="width:100%;" src="assets/img/Shortcuts.jpeg">
 						<div class="block block-strong">
-							<h2 style="text-align: center;">راستەوخو بو شورکات زیاد بکە</h2>
+							<h2 style="text-align: center;"> </h2>
 						</div>
 					</div>
 				</div>
@@ -1016,6 +1016,24 @@
 							<ul>
 																	<li>
 									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
+									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/snapchat.plist'" class="item-content">
+										<div class="item-media">
+											<img class="shadow img-icon" src="assets/cdn/images/snapchat.png">
+										</div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">snapchat</div>
+												<div class="item-title" style="color: #808080">v282.0</div>
+											</div>
+											<div class="item-title-row">
+												<div class="item-subtitle">@snapchat</div>
+												<div class="item-subtitle" style="color: #808080"></div>
+											</div>
+										</div>
+									</div>
+									</a>
+								</li><li>
+									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
 									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/instagram.plist'" class="item-content">
 										<div class="item-media">
 											<img class="shadow img-icon" src="assets/cdn/images/instagram.png">
@@ -1041,9 +1059,9 @@
 												<div class="navbar navbar-large">
 													<div class="navbar-bg"></div>
 													<div class="navbar-inner">
-														<div class="title sliding">شورکات</div>
+														<div class="title sliding">العاب</div>
 														<div class="title-large">
-															<div class="title-large-text">شورکات</div>
+															<div class="title-large-text">العاب</div>
 														</div>
 														<div class="right">
 															<a class="link popup-close" href="#"><i class="f7-icons">chevron_down_circle_fill</i></a>
@@ -1064,7 +1082,7 @@
 										<div class="item-inner">
 											<div class="item-title-row">
 												<div class="item-title">GTA San</div>
-												<div class="item-title" style="color: #808080">v8.3.2</div>
+												<div class="item-title" style="color: #808080">v7.0</div>
 											</div>
 											<div class="item-title-row">
 												<div class="item-subtitle">@GTA SAN</div>
@@ -1074,7 +1092,65 @@
 									</div>
 									</a>
 								</li>
+	<li>
+									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
+									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/CARPARKING.plist'" class="item-content">
+										<div class="item-media">
+											<img class="shadow img-icon" src="assets/cdn/images/CARPARKING.png">
+										</div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">car parking</div>
+												<div class="item-title" style="color: #808080">v5.7.9</div>
+											</div>
+											<div class="item-title-row">
+												<div class="item-subtitle">@CARPARKING</div>
+												<div class="item-subtitle" style="color: #808080"></div>
+											</div>
+										</div>
+									</div>
+									</a>
+								</li>	
 	
+<li>
+									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
+									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/fortnite.plist'" class="item-content">
+										<div class="item-media">
+											<img class="shadow img-icon" src="assets/cdn/images/fortnite.png">
+										</div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">FORTNITE</div>
+												<div class="item-title" style="color: #808080">v2.0</div>
+											</div>
+											<div class="item-title-row">
+												<div class="item-subtitle">@FORTNITE</div>
+												<div class="item-subtitle" style="color: #808080"></div>
+											</div>
+										</div>
+									</div>
+									</a>
+								</li>
+<li>
+									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
+									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/clashofclans.plist'" class="item-content">
+										<div class="item-media">
+											<img class="shadow img-icon" src="assets/cdn/images/clashofclans.png">
+										</div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">CLASH OF CLANS</div>
+												<div class="item-title" style="color: #808080">v13.35.7</div>
+											</div>
+											<div class="item-title-row">
+												<div class="item-subtitle">@CLASHOFCLANS</div>
+												<div class="item-subtitle" style="color: #808080"></div>
+											</div>
+										</div>
+									</div>
+									</a>
+								</li>
+
 		<li>
 									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
 									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/FIFA21.plist'" class="item-content">
@@ -1171,7 +1247,7 @@
 												<div class="item-title" style="color: #808080">v8.3.2</div>
 											</div>
 											<div class="item-title-row">
-												<div class="item-subtitle">@iamshv4n</div>
+												<div class="item-subtitle">@videostar++</div>
 												<div class="item-subtitle" style="color: #808080"></div>
 											</div>
 										</div>
@@ -1199,6 +1275,26 @@
 									</a>
 								</li>
 
+<li>
+									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
+									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/alightmotion.plist'" class="item-content">
+										<div class="item-media">
+											<img class="shadow img-icon" src="assets/cdn/images/alightmotion.png">
+										</div>
+										<div class="item-inner">
+											<div class="item-title-row">
+												<div class="item-title">Alight motion pro </div>
+												<div class="item-title" style="color: #808080">v1.1.5</div>
+											</div>
+											<div class="item-title-row">
+												<div class="item-subtitle">@AlightMotionPro</div>
+												<div class="item-subtitle" style="color: #808080">127.4m</div>
+											</div>
+										</div>
+									</div>
+									</a>
+								</li>
+
 								<li>
 									<a href="#" style="color: inherit;" class="popup-open" data-popup="#dl-popup">
 									<div onclick="location='itms-services://?action=download-manifest&url=https://isstore.netlify.app/plist/spotify.plist'" class="item-content">
@@ -1211,7 +1307,7 @@
 												<div class="item-title" style="color: #808080">v4.1</div>
 											</div>
 											<div class="item-title-row">
-												<div class="item-subtitle">@ShvanStore</div>
+												<div class="item-subtitle">@spotify++</div>
 												<div class="item-subtitle" style="color: #808080">11.56 MB</div>
 											</div>
 										</div>
@@ -1643,7 +1739,7 @@
 																					</div>
 																					<div class="white-back page-content">
 																					   <div class="block-title block-title-medium" style="text-align: right">ڤیدیۆ ستار : کار ناکات ❌<br>
-																		   ئەنکەڤەر : کار ناکات ☑️<br>
+																		   ئەنکەڤەر : کار ناکات ❌<br>
 																		   ئۆدسیی : کار ناکات ❌<br>
 																		   تورین: کار ناکات ❌<br>
 																		   کاینماستەر : کار ناکات ❌<br>
