--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<a href="#appsTab" class="tab-link">
 						<i class="icon f7-icons if-not-md">rectangle_fill_on_rectangle_angled_fill</i>
 						<i class="icon material-icons if-md">rectangle_fill_on_rectangle_angled_fill</i>
-						<span class="tabbar-label">ئه‌په‌كان</span>
+						<span class="tabbar-label">‌‌به رنامج</span>
 					</a>
 					<a href="#server" class="tab-link">
 						<i class="icon f7-icons if-not-md">square_stack_3d_down_right_fill</i>
