--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
 		<div class="block-title" > IS STORE ده‌رباره‌</div>
 		<div class="block block-strong">
 			<h2 style="text-align: right;">IS STORE</h2>
-			<p style="font-size: 15px;text-align: right"> من شفان ستوری مە بفەر زانی بو وان کەسان یئ بەرنامجئت بلاس بـبارە دفروشن بو سیستەمئ ایفون کو بەرنامج بـ(free)ئانکو بـبەلاش بەردەستن بو ئەوەی رئژەیکی دیارکری بارە بدەست فە بینن ئەف کارەیە کریە من شفان ستوری رابوم بدروستکرنا سایتەک بو بەرنامجئت هاکـکری ب(free) ئانکو بـبەلاش بەردەستن 
-لکەنالئ مە روژانە فئرکاری و زانیاری بـمفا بەلاف دکەین دەربارەی سایتئ مە و bin codeزانیاریئت زئدەتر.....  </p>
+			<p style="font-size: 15px;text-align: right">من شڤان ستوری بە پیویستم زانی بو ئەو کەسانای کە بەرنامە پلاسەکان بە پارە دەفروشن بو سیستەمی ئایفون کە بەرنامەکان بە فری بەردەستن بەم بو ئەوەی ریژەیکی دیاری کراوی پارە بەدەست بینن ئەم کارەین کردوە من وەک شفان ستوری هەلسم بە دروست کردنی سایتیک بو ئەو بەرنامە هاکانە کە بەفری بەردەستن<br>
+			لە چەناڵەکەمان ڕۆژانە فێرکاری و زانیاری بەسود دائەنێن دەربارەی هەموو سیستەمەکان و بین کۆد زانیاری زیاتریش</p>
 		</div>
 <!--
 		<div>
